# score_calculate

./: .gitignore  Cargo.toml  README.md  score_calc_dyss.sh  score_calc_only_needed.job
scripts/: extract.py
src/: handle.R  main.rs
