[package]
name = "score_calculate"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

[dependencies]
dtw = {path = "../dtw"}
squiggler = {path = "../squiggler"}
knn_predictor = {path = "../knn_predictor"}
bio = "*"
rand = "*"
rayon = "*"
histogram_minimizer = {path = "../histogram_minimizer"}
utility = {path = "../utility"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
